Apply suggestions from code review
Co-authored-by: Paul Valladares <85648028+dreyfus92@users.noreply.github.com>

--- a/src/content/docs/es/tutorial/0-introduction/index.mdx
+++ b/src/content/docs/es/tutorial/0-introduction/index.mdx
@@ -20,8 +20,8 @@ A lo largo del camino, tú:
 - Crearás páginas y entradas de blog para tu sitio web
 - Construirás con componentes Astro
 - Consultarás y trabajarás con archivos locales
-- Añada interactividad a su sitio web 
-- Despliegue de su sitio en la web
+- Añadirás interactividad a tu sitio web 
+- Desplegarás tu sitio en la web
 
 ¿Quieres una vista previa de lo que vas a construir? Puedes ver el proyecto final en [GitHub](https://github.com/withastro/blog-tutorial-demo) o [StackBlitz](https://stackblitz.com/github/withastro/blog-tutorial-demo/tree/complete?file=src%2Fpages%2Findex.astro).
 
