--- a/src/content/docs/es/tutorial/1-setup/1.mdx
+++ b/src/content/docs/es/tutorial/1-setup/1.mdx
@@ -1,6 +1,6 @@
 ---
 type: tutorial
-title: Prepare su entorno de desarrollo
+title: Prepara tu entorno de desarrollo
 i18nReady: true
 description: |-
   Tutorial: Crea tu primer blog Astro —
@@ -49,10 +49,10 @@ Si el comando devuelve un mensaje de error como `Command 'node' not found`, o un
 Además, tendrás que descargar e instalar un **editor de código** para escribir tu código. 
 
 :::tip[usaremos...]
-Este tutorial utilizará **VS Code**, pero puede utilizar cualquier editor para su sistema operativo.
+Este tutorial utilizará **VS Code**, pero puedes utilizar cualquier editor para tu sistema operativo.
 :::
 
-1. [Descargue e instale VS Code](https://code.visualstudio.com/#alt-downloads) u otro editor de código de su elección. 
+1. [Descarga e instala VS Code](https://code.visualstudio.com/#alt-downloads) u otro editor de código de tu elección. 
 
 
 
@@ -76,7 +76,7 @@ Este tutorial utilizará **VS Code**, pero puede utilizar cualquier editor para 
       </Option>
     </MultipleChoice>
 
-2. ¿Un proveedor de control de versiones en línea para su repositorio?
+2. ¿Un proveedor de control de versiones en línea para tu repositorio?
 
     <MultipleChoice>
       <Option isCorrect>
