--- a/src/content/docs/es/tutorial/1-setup/2.mdx
+++ b/src/content/docs/es/tutorial/1-setup/2.mdx
@@ -1,6 +1,6 @@
 ---
 type: tutorial
-title: Cree su primer proyecto Astro
+title: Crea tu primer proyecto Astro
 i18nReady: true
 description: |-
   Tutorial: Crea tu primer blog Astro —
@@ -16,8 +16,8 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
 
 
 <PreCheck>
-  - Ejecute el asistente de configuración `create astro` para crear un nuevo proyecto Astro
-  - Iniciar el servidor Astro en modo de desarrollo (dev)
+  - Ejecuta el asistente de configuración `create astro` para crear un nuevo proyecto Astro
+  - Inicia el servidor Astro en modo de desarrollo (dev)
   - Vea una vista previa en directo de su sitio web en su navegador
 </PreCheck>
 
@@ -25,7 +25,7 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
 
 La forma preferida de crear un nuevo sitio Astro es a través de nuestro asistente de configuración `create astro`.
 
-1. En la línea de comandos de su terminal, ejecute el siguiente comando utilizando su gestor de paquetes preferido:
+1. En la línea de comandos de su terminal, ejecuta el siguiente comando utilizando tu gestor de paquetes preferido:
 
     <PackageManagerTabs>
       <Fragment slot="npm">
@@ -48,29 +48,29 @@ La forma preferida de crear un nuevo sitio Astro es a través de nuestro asisten
       </Fragment>
     </PackageManagerTabs>
 
-2. Confirme `y` para instalar `create-astro`.
-3. Cuando se le pregunte "¿Dónde desea crear su nuevo proyecto?", escriba el nombre de una carpeta para crear un nuevo directorio para su proyecto, por ejemplo
+2. Confirma `y` para instalar `create-astro`.
+3. Cuando el prompt te pregunte "¿Dónde desea crear su nuevo proyecto?", escribe el nombre de una carpeta para crear un nuevo directorio para su proyecto, por ejemplo
 `./tutorial`
 
     :::note
     Un nuevo proyecto Astro sólo puede crearse en una carpeta completamente vacía, así que elige un nombre para tu carpeta que no exista ya.
     :::
 
-4. Verás una pequeña lista de plantillas de inicio entre las que puedes elegir. Utilice las teclas de flecha (arriba y abajo) para navegar hasta la plantilla "Vacío" y, a continuación, pulse return (Enter) para enviar su elección. 
+4. Verás una pequeña lista de plantillas de inicio entre las que puedes elegir. Utiliza las teclas de flecha (arriba y abajo) para navegar hasta la plantilla "Vacío" y, a continuación, pulsa return (Enter) para enviar tu elección. 
 
-5. Cuando aparezca la pregunta "¿Desea instalar las dependencias?", escriba `y`.
+5. Cuando aparezca la pregunta "¿Desea instalar las dependencias?", escribe `y`.
 
 6. Cuando el prompt te pregunte si planeas escribir TypeScript, teclea `n`. 
 
-7. Cuando se le pregunte: "¿Desea inicializar un nuevo repositorio git?", escriba `y`.
+7. Cuando el prompt te pregunte: "¿Desea inicializar un nuevo repositorio git?", escriba `y`.
 
-Cuando finalice el asistente de instalación, ya no necesitará este terminal. Ahora puede abrir VS Code para continuar.
+Cuando finalice el asistente de instalación, ya no necesitarás esta terminal. Ahora puede abrir VS Code para continuar.
 
 ## Abra su proyecto en VS Code
 
-1. Abra VS Code. Se le pedirá que abra una carpeta. Elija la carpeta que creó durante el asistente de instalación.
+1. Abra VS Code. Se te pedirá que abra una carpeta. Elige la carpeta que creaste durante el asistente de instalación.
 
-2. Si es la primera vez que abre un proyecto Astro, debería ver una notificación preguntándole si desea instalar las extensiones recomendadas. Haz clic para ver las extensiones recomendadas y elige [Astro language support extension](https://marketplace.visualstudio.com/items?itemName=astro-build.astro-vscode). Esto proporcionará resaltado de sintaxis y autocompletado para tu código Astro.
+2. Si es la primera vez que abres un proyecto Astro, deberías ver una notificación preguntándote si deseas instalar las extensiones recomendadas. Haz clic para ver las extensiones recomendadas y elige [Astro language support extension](https://marketplace.visualstudio.com/items?itemName=astro-build.astro-vscode). Esto proporcionará resaltado de sintaxis y autocompletado para tu código Astro.
 
 3. Asegúrese de que el terminal está visible y de que puede ver el símbolo del sistema, por ejemplo:
 
@@ -82,17 +82,17 @@ Cuando finalice el asistente de instalación, ya no necesitará este terminal. A
     Para cambiar la visibilidad del terminal, utilice <kbd>Ctrl + J</kbd> (macOS: <kbd>Cmd ⌘ + J</kbd>).
     :::
 
-Ahora puede utilizar el terminal integrado en esta ventana, en lugar de la aplicación Terminal de su ordenador, para el resto de este tutorial.
+Ahora puedes utilizar el terminal integrada en esta ventana, en lugar de la aplicación Terminal de tu ordenador, para el resto de este tutorial.
 
 
 
-## Ejecutar Astro en modo de desarrollo
+## Ejecuta Astro en modo desarrollo
 
 Para poder previsualizar los archivos de tu proyecto _como un sitio web_ mientras trabajas, necesitarás que Astro se ejecute en modo desarrollo (dev).
 
-### Iniciar el servidor de desarrollo
+### Inicia el servidor de desarrollo
 
-1. Ejecute el comando para iniciar el servidor Astro dev escribiendo en el terminal de VS Code:
+1. Ejecuta el comando para iniciar el servidor Astro dev escribiendo en el terminal de VS Code:
 
     <PackageManagerTabs>
       <Fragment slot="npm">
@@ -112,9 +112,9 @@ Para poder previsualizar los archivos de tu proyecto _como un sitio web_ mientra
       </Fragment>
     </PackageManagerTabs>
 
-    Ahora deberías ver la confirmación en el terminal de que Astro se está ejecutando en modo dev. 🚀
+    Ahora deberías ver la confirmación en el terminal que Astro está siendo ejecutando en modo dev. 🚀
 
-## Ver una vista previa de su sitio web
+## Vea una vista previa de su sitio web
 
 Tus archivos de proyecto contienen todo el código necesario para mostrar un sitio web Astro, pero el navegador es el responsable de mostrar tu código como páginas web.
 
@@ -126,13 +126,13 @@ Tus archivos de proyecto contienen todo el código necesario para mostrar un sit
 
     ![Una página en blanco con la palabra Astro en la parte superior.](/tutorial/minimal.png)
 
-:::tip[Uso del servidor de desarrollo Astro]
+:::tip[Usando el servidor de desarrollo Astro]
 
-Mientras el servidor Astro esté funcionando en modo de desarrollo, NO podrás ejecutar comandos en tu ventana de terminal. En su lugar, este panel le dará retroalimentación mientras previsualiza su sitio.
+Mientras el servidor Astro esté funcionando en modo de desarrollo, NO podrás ejecutar comandos en tu ventana de terminal. En su lugar, este panel te dará retroalimentación mientras previsualiza su sitio.
 
-Puede detener el servidor de desarrollo en cualquier momento y volver al símbolo del sistema escribiendo <kbd>Ctrl + C</kbd> en el terminal.
+Puedes detener el servidor de desarrollo en cualquier momento y volver al símbolo del sistema escribiendo <kbd>Ctrl + C</kbd> en el terminal.
 
-A veces el servidor de desarrollo se detendrá por sí mismo mientras estás trabajando. Si la vista previa en vivo deja de funcionar, vuelve al terminal y reinicia el servidor de desarrollo escribiendo `npm run dev`.
+A veces el servidor de desarrollo se detendrá por sí mismo mientras estás trabajando. Si la vista previa en vivo deja de funcionar, vuelve a la terminal y reinicia el servidor de desarrollo escribiendo `npm run dev`.
 :::
 
 <Box icon="check-list">
@@ -146,4 +146,4 @@ A veces el servidor de desarrollo se detendrá por sí mismo mientras estás tra
 
 ### Recursos
 
-- <p>[Introducción a Visual Studio Code](https://code.visualstudio.com/docs/introvideos/basics) <Badge>externo</Badge> — un tutorial en vídeo para instalar, configurar y trabajar con VS Code</p>
+- <p>[Introducción a Visual Studio Code](https://code.visualstudio.com/docs/introvideos/basics) <Badge>externo</Badge> — un video tutorial para instalar, configurar y trabajar con VS Code</p>
