--- a/src/content/docs/es/tutorial/1-setup/4.mdx
+++ b/src/content/docs/es/tutorial/1-setup/4.mdx
@@ -1,6 +1,6 @@
 ---
 type: tutorial
-title: Almacene su repositorio en línea
+title: Almacena tu repositorio en línea
 i18nReady: true
 description: |-
   Tutorial: Crea tu primer blog Astro —
@@ -14,7 +14,7 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
 
 
 <PreCheck>
-  - Ponga en línea su repositorio de proyectos
+  - Pon en línea tu repositorio de proyectos
 </PreCheck>
 
 Este tutorial utilizará GitHub para almacenar nuestro repositorio y conectarse a un host web. Te invitamos a utilizar el proveedor de git en línea de su elección.
@@ -23,29 +23,29 @@ Este tutorial utilizará GitHub para almacenar nuestro repositorio y conectarse 
 Si ya estás familiarizado con git y tienes tu propio flujo de trabajo, crea un nuevo repositorio de GitHub para tu proyecto utilizando el método que prefieras. Pasa a la página siguiente: ["Despliegue de su sitio en la Web"](/es/tutorial/1-setup/5/).
 :::
 
-## Crear un repositorio en GitHub
+## Crea un repositorio en GitHub
 
-Aunque hay algunas maneras de obtener su código local almacenado en GitHub, este tutorial le guiará a través de un método que no requiere el uso de git en la línea de comandos. 
+Aunque hay algunas maneras de obtener su código local almacenado en GitHub, este tutorial te guiará a través de un método que no requiere el uso de git en la línea de comandos. 
 
 1. Accede a GitHub.com en un navegador y haz clic en el <kbd>+</kbd> de la parte superior derecha de la pantalla para crear un nuevo repositorio. 
 
-2. Elija un nombre para su repositorio. No tiene por qué ser el mismo nombre que la carpeta del proyecto.
+2. Elige un nombre para tu repositorio. No tiene por qué ser el mismo nombre que la carpeta del proyecto.
 
-3. Se le presentarán opciones, pero no necesita cambiar ninguna de las predeterminadas. Desplácese hacia abajo y pulse el botón <kbd>Create Repository</kbd>.
+3. Se te presentarán opciones, pero no necesitas cambiar ninguna de las predeterminadas. Desplázate hacia abajo y pulsa el botón <kbd>Create Repository</kbd>.
 
-4. Se le presentarán varios pasos de configuración, pero no necesitará utilizar ninguno de ellos. Anote la URL de su repositorio. Ahora puede salir de esta página sin hacer nada.
+4. Se te presentarán varios pasos de configuración, pero no necesitarás utilizar ninguno de ellos. Anota la URL de su repositorio. Ahora puedes salir de esta página sin hacer nada.
 
 
 ## Compila tu código local en GitHub
 
-En la última sección, usted hizo un cambio en el contenido de su página. Esto significa que los archivos de tu proyecto han cambiado, y VS Code debería mostrar un número encima del icono del menú "Fuente". Esta pestaña de fuente es donde irás regularmente para actualizar tus archivos en GitHub.
+En la última sección, tu hiciste un cambio en el contenido de su página. Esto significa que los archivos de tu proyecto han cambiado y VS Code debería mostrar un número encima del icono del menú "Fuente". Esta pestaña de fuente es a donde irás regularmente para actualizar tus archivos en GitHub.
 
 
-1. Haga clic en la pestaña Control de código fuente en su VS Code para ver una lista de los archivos que han cambiado. Si aparece un mensaje indicando que necesita instalar `git`, siga las instrucciones que se proporcionan y, a continuación, vuelva a cargar VS Code.
+1. Haz clic en la pestaña Control de código fuente en su VS Code para ver una lista de los archivos que han cambiado. Si aparece un mensaje indicando que necesita instalar `git`, sigue las instrucciones que se proporcionan y, a continuación, vuelve a cargar VS Code.
 
-2. Haga clic en el menú <kbd>•••</kbd> "3 puntos" situado encima del mensaje de confirmación y seleccione <kbd>Remote</kbd> > <kbd>Add Remote</kbd>.
+2. Haz clic en el menú <kbd>•••</kbd> "3 puntos" situado encima del mensaje de confirmación y selecciona <kbd>Remote</kbd> > <kbd>Add Remote</kbd>.
 
-3. Seleccione <kbd>Add Remote from GitHub</kbd>. Si es necesario, siga los pasos de autenticación y, a continuación, vuelva a VS Code y repita esta acción.
+3. Selecciona <kbd>Add Remote from GitHub</kbd>. Si es necesario, sigue los pasos de autenticación y, a continuación, vuelve a VS Code y repite esta acción.
 
 4. Deberías ver una lista de todos tus repositorios en GitHub. Elige el que creaste para este proyecto. Si no ves tu proyecto, pega directamente su URL de GitHub. Puede que también se te pida que le des un nombre local a este repositorio. Puedes seleccionar el nombre que quieras.
 
@@ -73,4 +73,4 @@ Para verificar que tu proyecto está almacenado correctamente en GitHub, visita 
 
 ### Recursos
 
-- <p>[Uso de Git Source control en VS Code](https://code.visualstudio.com/docs/sourcecontrol/overview#_git-support) <Badge>externo</Badge></p>
+- <p>[Usando el control de Git Source en VS Code](https://code.visualstudio.com/docs/sourcecontrol/overview#_git-support) <Badge>externo</Badge></p>
