--- a/src/content/docs/es/tutorial/1-setup/5.mdx
+++ b/src/content/docs/es/tutorial/1-setup/5.mdx
@@ -1,6 +1,6 @@
 ---
 type: tutorial
-title: Despliegue de su sitio en la web
+title: Despliega tu sitio en la web
 i18nReady: true
 description: |-
   Tutorial: Crea tu primer blog Astro —
@@ -17,36 +17,36 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
 
 <PreCheck>
   - Añade tu repositorio GitHub como una nueva aplicación Netlify
-  - Despliegue de su sitio Astro en la web
+  - Despliega tu sitio Astro en la web
 </PreCheck>
 
 Aquí, conectarás tu repositorio de GitHub a Netlify. Netlify utilizará ese proyecto para construir y desplegar tu sitio en vivo en la web cada vez que confirmes un cambio en tu código. 
 
 :::tip[usaremos...]
-Este tutorial utilizará **Netlify**, pero le invitamos a utilizar su servicio de alojamiento preferido para desplegar su sitio en Internet.
+Este tutorial utilizará **Netlify**, pero te invitamos a utilizar tu servicio de alojamiento preferido para desplegar tu sitio en Internet.
 :::
 
-## Crear un nuevo sitio Netlify
+## Crea un nuevo sitio Netlify
 
-1. Cree una cuenta gratuita en [Netlify](https://netlify.com) si aún no tiene una.
+1. Crea una cuenta gratuita en [Netlify](https://netlify.com) si aún no tienes una.
 
-    Anote su nombre de usuario. Verá su panel de control y los sitios que cree en `https://app.netlify.com/teams/username`.
+    Anota tu nombre de usuario. Verás tu panel de control y cualquiera de los sitios que crees en `https://app.netlify.com/teams/username`.
 
-2. Click en <kbd>Añadir nuevo sitio</kbd> > <kbd>Importar un proyecto existente</kbd>.
+2. Clic en <kbd>Añadir nuevo sitio</kbd> > <kbd>Importar un proyecto existente</kbd>.
 
     Se te pedirá que te conectes a un proveedor de Git. Elige GitHub y sigue los pasos que aparecen en pantalla para autenticar tu cuenta de GitHub. A continuación, elige el repositorio GitHub de tu proyecto Astro de la lista proporcionada.
 
-3. En el último paso, Netlify le mostrará la configuración del sitio de su aplicación. Los valores predeterminados deben ser correctos para tu proyecto Astro, así que puedes desplazarte hacia abajo y hacer click en <kbd>Desplegar sitio</kbd>.
+3. En el último paso, Netlify te mostrará la configuración del sitio de tu aplicación. Los valores predeterminados deben ser correctos para tu proyecto Astro, así que puedes desplazarte hacia abajo y hacer clic en <kbd>Desplegar sitio</kbd>.
 
-Enhorabuena, ¡tienes una web Astro!
+Enhorabuena, ¡tienes un sitio web Astro!
 
-## Cambiar el nombre del proyecto
+## Cambia el nombre del proyecto
 
-En la página de resumen de su sitio en Netlify, verá el nombre de su proyecto generado aleatoriamente, y la URL de su sitio web de la forma `https://project-name-123456.netlify.app`. Puede cambiar el nombre de su proyecto por algo más memorable, y esto actualizará automáticamente su URL.
+En la página de resumen de tu sitio en Netlify, verá el nombre de su proyecto generado aleatoriamente, y la URL de tu sitio web de la forma `https://project-name-123456.netlify.app`. Puede cambiar el nombre de tu proyecto por algo más memorable y esto actualizará automáticamente tu URL.
 
-## Visite su nuevo sitio web
+## Visita tu nuevo sitio web
 
-Haga clic en la URL en la configuración de su sitio, o escríbala en una ventana del navegador para ver su nuevo sitio web.
+Haz clic en la URL en la configuración de tu sitio o escríbela en una ventana del navegador para ver tu nuevo sitio web.
 
 
 
@@ -56,11 +56,11 @@ Haga clic en la URL en la configuración de su sitio, o escríbala en una ventan
 
 
 
-Quiere actualizar la página de inicio de su sitio web actual. ¿Qué pasos debe seguir?
+Tu quieres actualizar la página de inicio de tu sitio web actual. ¿Qué pasos debes seguir?
 
   <MultipleChoice>
     <Option>
-      Abro un terminal, ejecuto `create astro`, y luego visito mi URL de Netlify.
+      Abro una terminal, ejecuto `create astro`, y luego visito mi URL de Netlify.
     </Option>
     <Option>
       Cambio una configuración en mi aplicación Netlify, luego hago un fork nuevo del proyecto Astro en StackBlitz.
