--- a/src/content/docs/es/tutorial/1-setup/index.mdx
+++ b/src/content/docs/es/tutorial/1-setup/index.mdx
@@ -1,12 +1,12 @@
 ---
 type: tutorial
-unitTitle: Cree y despliegue su primer sitio Astro
+unitTitle: Crea y despliega tu primer sitio Astro
 title: 'Check in: Unidad 1 - Configuración'
 i18nReady: true
 description: >-
   Tutorial: Crea tu primer blog Astro —
 
-  Prepare su entorno de desarrollo y cree y despliegue su primer sitio Astro
+  Prepara tu entorno de desarrollo, crea y despliega tu primer sitio Astro
   sitio
 ---
 import Badge from '~/components/Badge.astro';
@@ -17,22 +17,22 @@ import Box from '~/components/tutorial/Box.astro';
 
 Ahora que ya sabes lo que vas a construir, vamos a preparar todas las herramientas que vas a necesitar. 
 
-Esta unidad le muestra cómo configurar su entorno de desarrollo y desplegar en Netlify. Pase a la [Unidad 2](/es/tutorial/2-pages/) si ya se siente cómodo con su entorno y flujo de trabajo.
+Esta unidad te muestra cómo configurar tu entorno de desarrollo y desplegar en Netlify. Pase a la [Unidad 2](/es/tutorial/2-pages/) si ya te sientes cómodo con tu entorno y flujo de trabajo.
 
 :::tip[utilizando stackblitz]
 
 ¿Quieres completar este tutorial en un editor de código en línea en su lugar?
 <details>
-<summary>Siga estas instrucciones y pase directamente a la Unidad 2.</summary>
+<summary>Sigue estas instrucciones y pasa directamente a la Unidad 2.</summary>
 
 **Configurar StackBlitz**
-1. Visite [astro.new](https://astro.new) y haga clic en el botón para abrir la plantilla "Proyecto vacío" en StackBlitz. 
+1. Visita [astro.new](https://astro.new) y haz clic en el botón para abrir la plantilla "Proyecto vacío" en StackBlitz. 
 
 2. Haz clic en "Iniciar sesión" en la parte superior derecha para iniciar sesión con tus credenciales de GitHub.
 
-3. En la parte superior izquierda de la ventana del editor StackBlitz, haga clic para hacer un "fork" de la plantilla (guardar en el panel de su propia cuenta).
+3. En la parte superior izquierda de la ventana del editor StackBlitz, haz clic para hacer un "fork" de la plantilla (guardar en el panel de tu propia cuenta).
 
-4. Espere a que se cargue el proyecto y verá una vista previa en vivo del inicio del "Proyecto vacío".
+4. Espera a que se cargue el proyecto y verás una vista previa en vivo del inicio del "Proyecto vacío".
 
 **Haz un cambio**
 
