--- a/src/content/docs/es/tutorial/2-pages/3.mdx
+++ b/src/content/docs/es/tutorial/2-pages/3.mdx
@@ -4,7 +4,7 @@ title: Añade contenido dinámico sobre ti
 i18nReady: true
 description: |-
   Tutorial: Crea tu primer blog Astro —
-  Utilice variables y renderización condicional en sus páginas Astro
+  Utiliza variables y renderización condicional en tus páginas Astro
 ---
 import Checklist from '~/components/Checklist.astro';
 import Spoiler from '~/components/Spoiler.astro';
@@ -19,7 +19,7 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
 Ahora que ya tienes un sitio web multipágina con contenido HTML, ¡vamos a añadir algo de HTML dinámico!
 
 <PreCheck>
-  - Defina el título de su página en frontmatter y utilícelo en su HTML
+  - Define el título de tu página en el frontmatter y utilízalo en su HTML
   - Visualización condicional de elementos HTML
   - Añade contenido sobre ti
 </PreCheck>
@@ -28,7 +28,7 @@ Cualquier archivo HTML es un lenguaje Astro válido. Pero con Astro puedes hacer
 
 ## Definir y utilizar una variable
 
-Abra `about.astro` que debería tener este aspecto:
+Abre `about.astro` que debería tener este aspecto:
 
 ```astro title="src/pages/about.astro"
 ---
@@ -87,7 +87,7 @@ Abra `about.astro` que debería tener este aspecto:
     </html>
     ```
 
-3. Actualice la vista previa en directo de su página `/about`.
+3. Actualiza la vista previa en directo de tu página `/about`.
   
     El texto de tu página debería tener el mismo aspecto, y el título de tu página mostrado en la pestaña de tu navegador debería decir ahora "Sobre mí" en lugar de "Astro". 
 
@@ -121,7 +121,7 @@ Abra `about.astro` que debería tener este aspecto:
     ---
     ```
 
-2. A continuación, añada el siguiente código a su plantilla HTML, debajo del contenido existente:
+2. A continuación, añade el siguiente código a tu plantilla HTML, debajo del contenido existente:
 
     ```astro title="src/pages/about.astro"
     <p>He aquí algunos datos sobre mí:</p>
@@ -202,9 +202,9 @@ También puedes usar tus variables de script para elegir **si renderizar o no** 
     ---
     ```
 
-2. Añada las siguientes líneas debajo de los párrafos existentes.
+2. Añade las siguientes líneas debajo de los párrafos existentes.
 
-    A continuación, compruebe la vista previa en directo en la pestaña de su navegador para ver lo que se muestra en la página:
+    A continuación, comprueba la vista previa en directo en la pestaña de tu navegador para ver lo que se muestra en la página:
 
     ```astro title="src/pages/about.astro" /:|&&/ "?"
     {happy && <p>¡Estoy feliz de aprender Astro!</p>}
@@ -214,7 +214,7 @@ También puedes usar tus variables de script para elegir **si renderizar o no** 
     {goal === 3 ? <p>Mi objetivo es terminar en 3 días.</p> : <p>Mi objetivo no son 3 días.</p>}
     ```
 
-3. Confirma tus cambios en GitHub antes de continuar. Haga esto cada vez que desee guardar su trabajo y actualizar su sitio web en vivo.
+3. Confirma tus cambios en GitHub antes de continuar. Haga esto cada vez que deseas guardar tu trabajo y actualizar tu sitio web en vivo.
 
 :::tip
 La sintaxis de plantillas de Astro es similar a la sintaxis JSX. Si alguna vez te preguntas cómo usar tu script en tu HTML, ¡buscar cómo se hace en JSX es probablemente un buen punto de partida!
@@ -277,4 +277,4 @@ Para cada expresión de la plantilla Astro, ¿puedes predecir el HTML (¡si lo h
 
 ### Recursos
 
-- [Expresiones dinámicas en Astro](/en/core-concepts/astro-syntax/#jsx-like-expressions)
+- [Expresiones dinámicas en Astro](/es/core-concepts/astro-syntax/#jsx-like-expressions)
