--- a/src/content/docs/es/tutorial/2-pages/4.mdx
+++ b/src/content/docs/es/tutorial/2-pages/4.mdx
@@ -21,7 +21,7 @@ Ahora que ya tienes una página "Acerca de" con contenido sobre ti, ¡vamos a da
 </PreCheck>
 
 
-## Estilizar una página individual
+## Estilar una página individual
 
 Usando las etiquetas `<style></style>` de Astro, puedes dar estilo a los elementos de tu página. Si añades **atributos** y **directivas** a estas etiquetas, tendrás aún más formas de aplicar estilos.
 
@@ -43,21 +43,21 @@ Usando las etiquetas `<style></style>` de Astro, puedes dar estilo a los element
 
     ```
 
-    Compruebe las tres páginas en la vista previa de su navegador
+    Comprueba las tres páginas en la vista previa de tu navegador
     
     - De qué color es el título de la página:
 
-        - ¿Su página de inicio?  <Spoiler>negro</Spoiler>
-        - ¿Su página Acerca de? <Spoiler>purpura</Spoiler>
+        - ¿Tu página de inicio?  <Spoiler>negro</Spoiler>
+        - ¿Tu página Acerca de? <Spoiler>purpura</Spoiler>
         - ¿La página de tu blog? <Spoiler>negro</Spoiler>
 
     - La página con el mayor texto de título es? <Spoiler>Tu página Acerca de</Spoiler>
 
     :::tip
-    Si no puede determinar los colores visualmente, puede utilizar las herramientas de desarrollo de su navegador para inspeccionar los elementos de título `<h1>` y verificar el color del texto aplicado.
+    Si no puedes determinar los colores visualmente, puedes utilizar las herramientas de desarrollo de su navegador para inspeccionar los elementos de título `<h1>` y verificar el color del texto aplicado.
     :::
 
-2. Añada el nombre de clase `skill` a los elementos `<li>` generados en su página Acerca de, para que podamos aplicarles estilo. Tu código debería tener este aspecto:
+2. Añade el nombre de clase `skill` a los elementos `<li>` generados en tu página Acerca de, para que podamos aplicarles estilo. Tu código debería tener este aspecto:
 
     ```astro title="src/pages/about.astro" 'class="skill"'
     <p>My skills are:</p>
@@ -66,7 +66,7 @@ Usando las etiquetas `<style></style>` de Astro, puedes dar estilo a los element
     </ul>
     ```
 
-3. Añada el siguiente código a la etiqueta de estilo existente:
+3. Añade el siguiente código a la etiqueta de estilo existente:
 
      ```astro title="src/pages/about.astro" ins={6-9}
     <style>
@@ -133,7 +133,7 @@ La etiqueta Astro `<style>` también puede hacer referencia a cualquier variable
 
 ## Pruébalo tú mismo - Definir variables CSS
  
- 1. Actualice la etiqueta `<style>` de su página Acerca de para que coincida con la de abajo. 
+ 1. Actualiza la etiqueta `<style>` de tu página Acerca de para que coincida con la de abajo. 
 
     ```astro title="src/pages/about.astro"
     <style define:vars={{skillColor, fontWeight, textCase}}>
@@ -195,11 +195,11 @@ const textCase = "uppercase";
 </Box>
 
 ### Recursos
-- [Comparación entre la sintaxis Astro y JSX](/en/core-concepts/astro-syntax/#differences-between-astro-and-jsx)
+- [Comparación entre la sintaxis Astro y JSX](/es/core-concepts/astro-syntax/#differences-between-astro-and-jsx)
 
-- [Etiqueta Astro `<style>`.](/en/guides/styling/#styling-in-astro)
+- [Etiqueta Astro `<style>`.](/es/guides/styling/#estilando-en-astro)
 
-- [Variables CSS en Astro](/en/guides/styling/#css-variables)
+- [Variables CSS en Astro](/es/guides/styling/#variables-de-css)
 
 
 
