--- a/src/content/docs/es/tutorial/2-pages/5.mdx
+++ b/src/content/docs/es/tutorial/2-pages/5.mdx
@@ -27,7 +27,7 @@ Hay varias formas de definir estilos **globales** en Astro, pero en este tutoria
 
 1. Crea un nuevo archivo en la ubicación `src/styles/global.css` (Primero tendrás que crear una carpeta `styles`).
 
-2. Copie el siguiente código en su nuevo archivo, `global.css`.
+2. Copia el siguiente código en tu nuevo archivo, `global.css`.
 
     ```css title="src/styles/global.css"
     html {
@@ -80,13 +80,13 @@ Hay varias formas de definir estilos **globales** en Astro, pero en este tutoria
     ---
     ```
 
-4. Compruebe la vista previa del navegador de su página Acerca de y ahora debería ver los nuevos estilos aplicados.
+4. Comprueba la vista previa del navegador de tu página Acerca de y ahora debería ver los nuevos estilos aplicados.
 
 <Box icon="puzzle-piece">
 
-## Pruébelo usted mismo - Importe su hoja de estilo global
+## Pruébalo tu mismo - Importa tu hoja de estilo global
 
-Añada la línea de código necesaria a cada archivo `.astro` de su proyecto para aplicar sus estilos globales a cada página de su sitio.
+Añade la línea de código necesaria a cada archivo `.astro` de tu proyecto para aplicar tus estilos globales a cada página de tu sitio.
 
 <details>
 <summary>✅ ¡Enséñame el código! ✅</summary>
