--- a/src/content/docs/es/tutorial/1-setup/3.mdx
+++ b/src/content/docs/es/tutorial/1-setup/3.mdx
@@ -1,6 +1,6 @@
 ---
 type: tutorial
-title: Escriba su primera línea de Astro
+title: Escribe tu primera línea de Astro
 i18nReady: true
 description: |-
   Tutorial: Crea tu primer blog Astro —
@@ -16,14 +16,14 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
 
 
 <PreCheck>
-  - Realice la primera edición de su nuevo sitio web
+  - Realiza la primera edición de tu nuevo sitio web
 </PreCheck>
 
-## Edite su página de inicio
+## Edita tu página de inicio
 
-1. En su editor de código, navegue en el panel de archivos del Explorador hasta `src/pages/index.astro` y haga clic en él para abrir el contenido del archivo en una pestaña editable.
+1. En tu editor de código, navega en el panel de archivos del Explorador hasta `src/pages/index.astro` y haz clic en él para abrir el contenido del archivo en una pestaña editable.
 
-    El contenido de su archivo `index.astro` debe tener este aspecto:
+    El contenido de tu archivo `index.astro` debe tener este aspecto:
 
     ```astro title="src/pages/index.astro"
     ---
@@ -43,9 +43,9 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
     </html>
     ```
 
-2. Edite el contenido de su página `<body>`.
+2. Edita el contenido de tu página `<body>`.
 
-    Escriba en el editor para cambiar el texto del encabezado de su página y guarde el cambio.
+    Escribe en el editor para cambiar el texto del encabezado de tu página y guarde el cambio.
 
     ```astro title="src/pages/index.astro" del={2} ins={3}
     <body>
@@ -54,7 +54,7 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
     </body>
     ```
 
-3. Compruebe la vista previa del navegador y debería ver el contenido de su página actualizado con el nuevo texto.
+3. Revisa la vista previa del navegador y deberías ver el contenido de tu página actualizado con el nuevo texto.
 
 ¡Enhorabuena! Ya eres desarrollador Astro.
 
