--- a/src/content/docs/es/tutorial/2-pages/2.mdx
+++ b/src/content/docs/es/tutorial/2-pages/2.mdx
@@ -30,15 +30,15 @@ Ahora que ya has creado páginas con archivos `.astro`, vamos a crear algunos po
 
 2. Añade un nuevo fichero (vacío) `post-1.md` dentro de tu nueva carpeta `/posts/`.
 
-3. Busque esta página en la vista previa de su navegador añadiendo `/posts/post-1` al final de su URL de vista previa. (por ejemplo, `localhost:3000/posts/post-1`)
+3. Busca esta página en la vista previa de tu navegador añadiendo `/posts/post-1` al final de tu URL de vista previa. (por ejemplo, `localhost:3000/posts/post-1`)
 
-4. Cambie la URL de vista previa del navegador para ver `/posts/post-2` en su lugar. (Se trata de una página que aún no ha creado). 
+4. Cambia la URL de vista previa del navegador para ver `/posts/post-2` en tu lugar. (Se trata de una página que aún no ha sido creada). 
 
-    Fíjese en los diferentes resultados que se obtienen al previsualizar una página "vacía" y otra que no existe. Esto le ayudará a solucionar problemas en el futuro.
+    Fíjate en los diferentes resultados que se obtienen al previsualizar una página "vacía" y otra que no existe. Esto te ayudará a solucionar problemas en el futuro.
 
 ## Escribir contenido Markdown
 
-1. Copie o escriba el siguiente código en `post-1.md`.
+1. Copia o escriba el siguiente código en `post-1.md`.
 
     ```markdown title="src/pages/posts/post-1.md"
     ---
@@ -70,9 +70,9 @@ Ahora que ya has creado páginas con archivos `.astro`, vamos a crear algunos po
     Terminaré el tutorial de Astro, y luego seguiré añadiendo más posts. Mira este espacio para más por venir.
     ```
 
-2. Compruebe de nuevo la vista previa de su navegador en `localhost:3000/posts/post-1`. Ahora debería ver el contenido de esta página.
+2. Comprueba de nuevo la vista previa de tu navegador en `localhost:3000/posts/post-1`. Ahora deberías ver el contenido de esta página.
 
-3. Utilice las herramientas de desarrollo de su navegador para inspeccionar esta página. Observa que, aunque no has escrito ningún elemento HTML, tu Markdown se ha convertido a HTML. Puede ver elementos como encabezados, párrafos y elementos de lista.
+3. Utiliza las herramientas de desarrollo de tu navegador para inspeccionar esta página. Observa que, aunque no has escrito ningún elemento HTML, tu Markdown se ha convertido a HTML. Puedes ver elementos como encabezados, párrafos y elementos de lista.
 
 :::note
 La información en la parte superior del archivo, dentro de las vallas de código, se llama frontmatter. Estos datos -incluyendo etiquetas y una imagen del post- son información *sobre* tu post que Astro puede usar. No aparece en la página automáticamente, pero accederemos a ella más adelante en el tutorial para mejorar tu sitio. 
@@ -161,7 +161,7 @@ La información en la parte superior del archivo, dentro de las vallas de códig
     </html>
     ```
 
-4. Compruebe la vista previa de su navegador y asegúrese de que:
+4. Comprueba la vista previa de tu navegador y asegúrete de que:
 
     - Todos tus enlaces para los posts 1, 2 y 3 llevan a una página funcional de tu sitio. (Si encuentras un error, comprueba tus enlaces en `blog.astro` o los nombres de tus archivos Markdown).
 
@@ -192,6 +192,6 @@ La información en la parte superior del archivo, dentro de las vallas de códig
 
 - [Markdown Cheat Sheet de The Markdown Guide](https://www.markdownguide.org/cheat-sheet/)  <Badge>externo</Badge>
 
-- [¿Qué son las herramientas para desarrolladores de navegadores? MDN](https://developer.mozilla.org/en-US/docs/Learn/Common_questions/What_are_browser_developer_tools)  <Badge>externo</Badge>
+- [¿Qué son las herramientas para desarrolladores de navegadores? MDN](https://developer.mozilla.org/es/docs/Learn/Common_questions/Tools_and_setup/What_are_browser_developer_tools)  <Badge>externo</Badge>
 
 - [YAML frontmatter](https://assemble.io/docs/YAML-front-matter.html)  <Badge>externo</Badge>
