Apply suggestions from code review
Co-authored-by: Paul Valladares <85648028+dreyfus92@users.noreply.github.com>

--- a/src/content/docs/es/tutorial/2-pages/1.mdx
+++ b/src/content/docs/es/tutorial/2-pages/1.mdx
@@ -1,6 +1,6 @@
 ---
 type: tutorial
-title: Cree su primera página Astro
+title: Crea tu primera página Astro
 i18nReady: true
 description: |-
   Tutorial: Crea tu primer blog Astro —
@@ -15,32 +15,32 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
 Ahora que ya sabes que los archivos `.astro` son los responsables de las páginas de tu sitio web, ¡vamos a crear uno!
 
 <PreCheck>
-  - Cree dos nuevas páginas en su sitio web: Acerca de y Blog
-  - Añada enlaces de navegación a sus páginas
-  - Despliegue en la web una versión actualizada de su sitio web
+  - Crea dos nuevas páginas en su sitio web: Acerca de y Blog
+  - Añade enlaces de navegación a tus páginas
+  - Despliega en la web una versión actualizada de tu sitio web
 </PreCheck>
 
 ## Crear un nuevo archivo `.astro`
 
-1. En el panel de archivos de su editor de código, vaya a la carpeta `src/pages/` donde verá el archivo existente `index.astro`
+1. En el panel de archivos de tu editor de código, ve a la carpeta `src/pages/` donde verás el archivo existente `index.astro`
 
 2. En esa misma carpeta, crea un nuevo archivo llamado `about.astro`.
 
-3. Copie o vuelva a escribir el contenido de `index.astro` en su nuevo archivo `about.astro`.
+3. Copia o vuelve a escribir el contenido de `index.astro` en tu nuevo archivo `about.astro`.
 
     :::tip
-    Su editor puede mostrar un círculo blanco sólido en la etiqueta de este archivo. Esto significa que el archivo aún no se ha guardado. En el menú Archivo de VS Code, active la opción "Guardar automáticamente" y ya no tendrá que guardar ningún archivo manualmente.
+    Tu editor puede mostrar un círculo blanco sólido en la etiqueta de este archivo. Esto significa que el archivo aún no se ha guardado. En el menú Archivo de VS Code, activa la opción "Guardar automáticamente" y ya no tendrás que guardar ningún archivo manualmente.
     :::
 
-4. Añada `/about` al final de la URL de la vista previa de su sitio web en la barra de direcciones y compruebe que puede ver una página cargada allí. (por ejemplo, `http://localhost:3000/about`)
+4. Añade `/about` al final de la URL de la vista previa de tu sitio web en la barra de direcciones y compruebe que puede ver una página cargada allí. (por ejemplo, `http://localhost:3000/about`)
 
 Ahora mismo, tu página "Acerca de" debería tener exactamente el mismo aspecto que la primera página, pero vamos a cambiarlo.
 
-## Edite su página
+## Edita tu página
 
-Edite el contenido HTML para que esta página sea sobre usted.
+Edita el contenido HTML para que esta página sea sobre ti.
 
-Para cambiar o añadir más contenido a su página Acerca de, añada más etiquetas de elementos HTML que contengan contenido. Puede copiar y pegar el código HTML siguiente entre las etiquetas `<body></body>` existentes, o crear las suyas propias.
+Para cambiar o añadir más contenido a su página Acerca de, añade más etiquetas de elementos HTML que contengan contenido. Puedes copiar y pegar el código HTML siguiente entre las etiquetas `<body></body>` existentes, o crear las tuyas.
 
 ```astro title="src/pages/about.astro" ins={3-8} del={2}
 <body>
@@ -54,11 +54,11 @@ Para cambiar o añadir más contenido a su página Acerca de, añada más etique
 </body>
 ```
 
-Ahora, vuelva a visitar su página `/about` en la pestaña de su navegador, y debería ver su contenido actualizado.
+Ahora, vuelve a visitar tu página `/about` en la pestaña de tu navegador, y debería ver tu contenido actualizado.
 
 ## Añadir enlaces de navegación
 
-Para facilitar la previsualización de todas sus páginas, añada enlaces HTML de navegación de páginas antes de su `<h1>` en la parte superior de sus dos páginas (`index.astro` y `about.astro`):
+Para facilitar la previsualización de todas tus páginas, añade enlaces HTML de navegación de páginas antes de tu `<h1>` en la parte superior de tus dos páginas (`index.astro` y `about.astro`):
 
 ```astro title="src/pages/about.astro" ins={1-2}
 <a href="/">Inicio</a>
@@ -68,7 +68,7 @@ Para facilitar la previsualización de todas sus páginas, añada enlaces HTML d
 <h2>... ¡y mi nuevo sitio Astro!</h2>
 ```
 
-Compruebe que puede hacer clic en estos enlaces para avanzar y retroceder entre las páginas de su sitio.
+Comprueba que puede hacer clic en estos enlaces para avanzar y retroceder entre las páginas de tu sitio.
 
 :::note
 A diferencia de muchos frameworks, Astro utiliza elementos HTML estándar `<a>` para navegar entre páginas (también llamados _routes_), con las tradicionales actualizaciones de página.
@@ -114,27 +114,27 @@ Actualizar el contenido de la página en `blog.astro` con:
 </body>
 ```
 
-Previsualice todo su sitio visitando las tres páginas en la vista previa de su navegador y compruébelo:
+Previsualiza todo tu sitio visitando las tres páginas en la vista previa de tu navegador y compruébalo:
 - Cada página enlaza correctamente con las tres páginas
-- Sus dos nuevas páginas tienen cada una su propio título descriptivo 
-- Sus dos nuevas páginas tienen cada una su propio párrafo de texto
+- Tus dos nuevas páginas tienen cada una su propio título descriptivo 
+- Tus dos nuevas páginas tienen cada una su propio párrafo de texto
 
-## Publique sus cambios en la web
-Si ha seguido nuestra configuración en la Unidad 1, puede publicar sus cambios en su sitio web en vivo a través de Netlify.
+## Publica tus cambios en la web
+Si has seguido nuestra configuración en la Unidad 1, puede publicar tus cambios en tu sitio web en vivo a través de Netlify.
 
 Cuando estés satisfecho con el aspecto de tu vista previa, has un **commit** de los cambios a tu repositorio online en GitHub. 
 
 1. En VS Code, previsualiza los archivos que han cambiado desde tu último commit en GitHub. 
 
-    - Vaya a la pestaña **Control de origen** del menú de la izquierda. Debería aparecer un pequeño "3".
+    - Ve a la pestaña **Control de origen** del menú de la izquierda. Debería aparecer un pequeño "3".
 
-    - Debería ver que `index.astro`, `about.astro` y `blog.astro` aparecen como archivos que han cambiado.
+    - Deberías ver que `index.astro`, `about.astro` y `blog.astro` aparecen como archivos que han cambiado.
 
-2. Introduzca un mensaje de confirmación (por ejemplo, "Añadidas dos nuevas páginas: acerca de y blog") en el cuadro de texto y pulse <kbd>Ctrl + Enter</kbd> (macOS: <kbd>Cmd ⌘ + Enter</kbd>) para confirmar el cambio en su espacio de trabajo actual.
+2. Introduce un mensaje de confirmación (por ejemplo, "Añadidas dos nuevas páginas: acerca de y blog") en el cuadro de texto y pulsa <kbd>Ctrl + Enter</kbd> (macOS: <kbd>Cmd ⌘ + Enter</kbd>) para confirmar el cambio en tu espacio de trabajo actual.
 
 3. Haz clic en el botón para <kbd>Sincronizar cambios</kbd> con GitHub.
 
-4. Después de esperar unos minutos, visite su URL Netlify para verificar que sus cambios se publican en vivo.
+4. Después de esperar unos minutos, visita tu URL Netlify para verificar que tus cambios sean publicados en vivo.
 
 :::tip[has commits y deploy regularmente]
 Sigue estos pasos cada vez que hagas una pausa en tu trabajo. Tus cambios se actualizarán en tu repositorio de GitHub. Si has desplegado a un sitio web Netlify, será reconstruido y republicado.
@@ -153,6 +153,6 @@ Sigue estos pasos cada vez que hagas una pausa en tu trabajo. Tus cambios se act
 
 ### Recursos
 
-- [Enrutamiento basado en archivos en Astro](/en/core-concepts/astro-pages/#file-based-routing)
+- [Enrutamiento basado en archivos en Astro](/es/core-concepts/astro-pages/#enrutamiento-basado-en-archivos)
 
-- [Astro páginas HTML](/en/core-concepts/astro-pages/#astro-pages)
+- [Astro páginas HTML](/es/core-concepts/astro-pages/#páginas-de-astro)
