--- a/src/content/docs/es/tutorial/2-pages/index.mdx
+++ b/src/content/docs/es/tutorial/2-pages/index.mdx
@@ -22,12 +22,12 @@ Ahora que ya tienes un sitio web en funcionamiento, ¡vamos a añadir páginas y
 ## ¿Adónde vamos?
 
 En esta unidad
-- Cree sus primeras páginas Astro con la sintaxis `.astro
+- Crea tus primeras páginas Astro con la sintaxis `.astro
 - Añadir posts con archivos Markdown (`.md`)
-- Estilizar una página individual con `<style>`.
+- Estilar una página individual con `<style>`.
 - Aplicar estilos globales a todas las páginas
 
- Por el camino, aprenderás cómo las **dos secciones de un archivo `.astro`** trabajan juntas para crear una página, y cómo usar variables y renderizado condicional en tus páginas.
+En el camino, aprenderás cómo las **dos secciones de un archivo `.astro`** trabajan juntas para crear una página, y cómo usar variables y renderizado condicional en tus páginas.
 
 <Box icon="check-list">
 ## Checklist
