--- a/src/content/docs/es/tutorial/1-setup/2.mdx
+++ b/src/content/docs/es/tutorial/1-setup/2.mdx
@@ -72,7 +72,7 @@ Cuando finalice el asistente de instalación, ya no necesitarás esta terminal. 
 
 2. Si es la primera vez que abres un proyecto Astro, deberías ver una notificación preguntándote si deseas instalar las extensiones recomendadas. Haz clic para ver las extensiones recomendadas y elige [Astro language support extension](https://marketplace.visualstudio.com/items?itemName=astro-build.astro-vscode). Esto proporcionará resaltado de sintaxis y autocompletado para tu código Astro.
 
-3. Asegúrese de que el terminal está visible y de que puede ver el símbolo del sistema, por ejemplo:
+3. Asegúrate de que el terminal esté visible y que puedas ver el símbolo del sistema, por ejemplo:
 
     ```sh
     user@machine:~/tutorial$
